--- a/album/index.html
+++ b/album/index.html
@@ -8,7 +8,8 @@
     body { font-family: sans-serif; background: #f4f4f4; margin: 0; padding: 0; }
     header { background: #0088cc; color: white; padding: 1em; text-align: center; }
     .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 10px; padding: 10px; }
-    .gallery img { width: 100%; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
+    .gallery img, .gallery video { width: 100%; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
+    .loading { text-align: center; padding: 2em; font-size: 18px; }
   </style>
 </head>
 <body>
@@ -17,11 +18,42 @@
     <p>Фото и видео из Telegram</p>
   </header>
   <main>
-    <div class="gallery">
-      <img src="https://placekitten.com/300/200" alt="пример">
-      <img src="https://placekitten.com/301/200" alt="пример">
-      <img src="https://placekitten.com/302/200" alt="пример">
-    </div>
+    <div id="gallery" class="gallery"></div>
+    <div id="loading" class="loading">Загружаем файлы...</div>
   </main>
+
+  <script>
+    // ⚡ Здесь будет запрос к нашему боту
+    async function loadAlbum() {
+      const gallery = document.getElementById("gallery");
+      const loading = document.getElementById("loading");
+
+      try {
+        // пока берём тестовый JSON (будет позже заменён API бота)
+        const response = await fetch("https://raw.githubusercontent.com/username/my_album_bot/main/album/demo.json");
+        const files = await response.json();
+
+        loading.style.display = "none";
+
+        files.forEach(file => {
+          if (file.type === "photo") {
+            const img = document.createElement("img");
+            img.src = file.url;
+            gallery.appendChild(img);
+          } else if (file.type === "video") {
+            const video = document.createElement("video");
+            video.src = file.url;
+            video.controls = true;
+            gallery.appendChild(video);
+          }
+        });
+      } catch (err) {
+        loading.textContent = "Ошибка загрузки альбома 😔";
+        console.error(err);
+      }
+    }
+
+    loadAlbum();
+  </script>
 </body>
 </html>
